# simple-wiki

./: LICENSE  README.markdown  simple-wiki.cabal
src/: Configuration.hs  Main.hs  Serving.hs
